add contenedor prioridad colas

--- a/index.html
+++ b/index.html
@@ -156,6 +156,14 @@
                     <div id="timeline" style="height: 330px;"> </div>
                 </div>
             </div>
+            <div class="shadow-lg p-5 mb-10 bg-body rounded">
+                <h3>Prioridad de Colas</h3>
+                <h2><label>FCFS ->3</label><br>
+                    <label>RR ->2</label><br>
+                    <label>SJF ->1</label><br>
+                </h2>
+
+            </div>
 
             <div class="container">
                 <div class="row">
